# RetinaFace-Cpp

Demo/ncnn/: CMakeLists.txt
Demo/ncnn/models/: retina.mem.h
Demo/ncnn/src/: anchor_generator.cpp  anchor_generator.h  detect.cpp
